--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ Django==3.1.2
 django-allauth==0.42.0
 django-bootstrap-form==3.4
 django-bootstrap3==14.1.0
+django-braces==1.15.0
 django-ckeditor==6.0.0
 django-cleanup==5.1.0
 django-countries==7.2.1
 django-crispy-forms==1.9.2
 django-filter==2.4.0
 django-js-asset==1.2.2
+django-model-utils==4.2.0
 djangorestframework==3.12.4
 idna==2.10
 importlib-metadata==1.7.0
@@ -30,6 +32,7 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
+swapper==1.3.0
 toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.10
