--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,9 @@ services:
       - 8021:8000
     command: sh -c /code/entrypoint.prod
     restart: always
+    extra_hosts:
+            - "host.docker.internal:host-gateway"
+
     volumes:
             - "./media:/media/assets"
             - "./assets:/code/assets"
