--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
             - "host.docker.internal:host-gateway"
 
     volumes:
-            - "./media:/media/assets"
+            - "./media:/code/media"
             - "./assets:/code/assets"
             - "./db.sqlite3:/code/db.sqlite3"
     env_file:
